# H

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
Application/: CMakeLists.txt
Application/Language_server/: CMakeLists.txt  JSON_serializer.cppm  Read_handler.cppm  Read_json_request.cppm  Request.cppm  Write_json_request.cppm  main.cpp
CMake/: convert_hltxt_to_hl.cmake
Examples/: CMakeLists.txt
Examples/Export_and_import_c_header/: module_b.h
Examples/Hello_world/: hello_world.hltxt  hlang_artifact.json
Examples/hl/: hello_world.hl
Libraries/: hlang_repository.json
Scripts/: build_utilities.py
Source/: CMakeLists.txt
Source/Binary_serializer/: Binary_serializer.cppm  Binary_serializer.tests.cpp  CMakeLists.txt  Generated.cppm  Generics.cppm
Source/Builder/: Builder.cpp  Builder.cppm  CMakeLists.txt  Common.cpp  Common.cppm  Repository.cpp  Repository.cppm  Target.cppm  Target_windows.cpp  main.cpp
Source/Compiler/: Analysis.cpp  Analysis.cppm  Builder.cpp  Builder.cppm  Builder.tests.cpp  CMakeLists.txt  Clang_code_generation.cpp  Clang_code_generation.cppm  Clang_compiler.cpp  Clang_compiler.cppm  Clang_data.cppm  Common.cpp  Common.cppm  Compile_commands_generator.cppm  Compiler.cpp  Compiler.cppm  Compiler.tests.cpp  Debug_info.cpp  Debug_info.cppm  Declarations.cpp  Declarations.cppm  Diagnostic.cpp  Diagnostic.cppm  Expressions.cpp  Expressions.cppm  Hash.cpp  Hash.cppm  Instructions.cpp  Instructions.cppm  Linker.cpp  Linker.cppm  Linker_coff.cpp  Linker_elf.cpp  Profiler.cppm  Recompilation.cpp  Recompilation.cppm  Recompilation.tests.cpp  Test_framework.cpp  Test_framework.cppm  Types.cpp  (+4 more)
Source/Compiler/Builtin/: Builtin.hltxt  CMakeLists.txt
Source/Compiler/Execution_engine/: Execution_engine.cpp  Execution_engine.cppm  Execution_engine.tests.cpp
Source/Compiler/JIT/: Core_module_layer.cpp  Core_module_layer.cppm  File_watcher.cpp  File_watcher.cppm  JIT_compiler.cpp  JIT_compiler.cppm  JIT_runner.cpp  JIT_runner.cppm  JIT_runner.tests.cpp  Just_in_time_compiler.cpp  Just_in_time_compiler.cppm  Recompile_module_layer.cpp  Recompile_module_layer.cppm
Source/Compiler/Project/: Artifact.cpp  Artifact.cppm  Repository.cpp  Repository.cppm  Target.cppm  Target_linux.cpp  Target_windows.cpp
Source/Core/: CMakeLists.txt  Core.cpp  Core.cppm  Declarations.cpp  Declarations.cppm  Expressions.cpp  Expressions.cppm  Formatter.cpp  Formatter.cppm  Hash.cpp  Hash.cppm  String_hash.cppm  Struct_layout.cppm  Types.cpp  Types.cppm
Source/Core/Execution_engine/: Execution_engine.cpp  Execution_engine.cppm  Execution_engine.tests.cpp
Source/Editor/: CMakeLists.txt  Editor.cpp  Editor.cppm  Editor.tests.cpp
Source/Interoperability/: CMakeLists.txt  C_header_exporter.cpp  C_header_exporter.cppm  C_header_exporter.tests.cpp  C_header_hash.cpp  C_header_hash.cppm  C_header_hash.tests.cpp  C_header_importer.cpp  C_header_importer.cppm  C_header_importer.tests.cpp  main.cpp
Source/JSON_serializer/: CMakeLists.txt  Generated.cppm  JSON_serializer.cpp  JSON_serializer.cppm  JSON_serializer.tests.cpp  Operators.cppm  Read_handler.cppm  Read_header_handler.cppm  Read_json.cppm  Read_module_name_handler.cppm  Reader.cppm  Write_json.cppm
Source/Language_server/: Breakpoint.cppm  CMakeLists.txt  Code_action.cpp  Code_action.cppm  Completion.cpp  Completion.cppm  Core.cpp  Core.cppm  Diagnostics.cpp  Diagnostics.cppm  Go_to_location.cpp  Go_to_location.cppm  Inlay_hints.cpp  Inlay_hints.cppm  Location.cpp  Location.cppm  Message.cpp  Message.cppm  Message_handler.cpp  Message_handler.cppm  Message_handler.tests.cpp  Request.cpp  Request.cppm  Server.cpp  Server.cppm  Server.tests.cpp  Stream.cpp  Stream.cppm  Stream.tests.cpp  main.cpp
Source/Parser/: CMakeLists.txt  Convertor.cpp  Convertor.cppm  Convertor.tests.cpp  Formatter.cpp  Formatter.cppm  Module_examples.cpp  Module_examples.cppm  Parse_tree.cpp  Parse_tree.cppm  Parser.cpp  Parser.cppm  Type_name_parser.cpp  Type_name_parser.cppm  main.cpp
Source/Parser/tree-sitter-hlang/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
Source/Parser/tree-sitter-hlang/bindings/c/: tree-sitter-hlang.h  tree-sitter-hlang.pc.in
Source/Parser/tree-sitter-hlang/bindings/go/: binding.go  binding_test.go
Source/Parser/tree-sitter-hlang/bindings/node/: binding.cc  index.js
Source/Parser/tree-sitter-hlang/bindings/python/tests/: test_binding.py
Source/Parser/tree-sitter-hlang/bindings/python/tree_sitter_hlang/: __init__.py  binding.c
Source/Parser/tree-sitter-hlang/bindings/rust/: build.rs  lib.rs
Source/Parser/tree-sitter-hlang/bindings/swift/TreeSitterHlangTests/: TreeSitterHlangTests.swift
Source/Parser/tree-sitter-hlang/src/: grammar.json  node-types.json  parser.c
Source/Parser/tree-sitter-hlang/test/corpus/: alias.txt  array_slices.txt  assignment_expressions.txt  binary_expressions.txt  binary_expressions_operator_precedence.txt  block_expressions.txt  booleans.txt  break_expressions.txt  comment_alias.txt  comment_enums.txt  comment_functions.txt  comment_global_variables.txt  comment_module_declaration.txt  comment_structs.txt  comment_unions.txt  constant_array_expressions.txt  contracts.txt  defer_expressions.txt  enum.txt  enum_flags.txt  for_loop_expressions.txt  function_constructor.txt  function_pointer_types.txt  global_variables.txt  hello_world.txt  if_expressions.txt  imports.txt  instance_call.txt  numbers.txt  numeric_casts.txt  pointer_types.txt  reflection.txt  structs.txt  switch_expressions.txt  ternary_condition_expressions.txt  type_constructor.txt  type_instance.txt  unary_expressions.txt  unions.txt  variable_declaration_expressions.txt  (+2 more)
Tests/: CMakeLists.txt  Minimal.cpp  Minimal.json
Tools/code_generator/: CMakeLists.txt  Code_generator.cpp  Code_generator.cppm  Code_generator.tests.cpp  main.cpp
Tools/tests_result_replacer/: CMakeLists.txt  Tests_results_replacer.cpp  Tests_results_replacer.cppm  Tests_results_replacer.tests.cpp  main.cpp
(+361 files in other folders)
